2003-03-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRuntime.cs: Cache no longer have a Dispose method.

	* HttpServerUtility.cs: removed MonoTODO.

2003-03-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpHelper.cs: store the values in an ArrayList to get them in correct
	order.

2003-02-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplicationFactory.cs: Global.asax takes precedence over
	global.asax if it exists.

	* HttpRequest.cs: use allowCrossAppMapping in MapPath.

2003-02-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: CreateHttpHandler is now internal.

	* HttpRequest.cs: allow setting QueryStringRaw, which
	invalidates the data obtained from the previous value. Added internal
	SetFilePath method.

	* HttpServerUtility.cs: implemented Execute and GetLastError.

2003-02-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpServerUtility.cs: style.

2003-02-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: only execute the EndRequest step on error
	condition or request marked as completed. This prevent page events from
	being called when, for example, the url authorization module forbids
	the request.

2003-02-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequest.cs: implemented the indexer.

2003-02-11  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HtmlizedException.cs: base class for exceptions that makes it easy to
	generate error pages.

	* HttpException.cs: improved error displaying.

	* HttpRuntime.cs: removed debugging output.

2003-02-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: display the error instead of hanging when we get
	any error before the last step of the request.

2003-02-04  Tim Haynes <thaynes@openlinksw.com>

	* HttpApplicationFactory.cs: fixed HttpRuntime.Close() to decrement
	instance counter.

2003-01-29  Gonzalo Paniagua Javier <gonzalo@ximian.com>
